<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_weight="10">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSelect_from_templates"
                android:id="@+id/buttonSelectFromTeplates" android:layout_gravity="center_horizontal|top"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView android:id="@+id/EditDrinkId" android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:visibility="gone"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DrinkName"
                    android:id="@+id/lblDrinkNameAddEdit" android:singleLine="true"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="New EditText"
                    android:id="@+id/editDrinkName" android:layout_gravity="center_horizontal|top"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SetDateTime"
                    android:id="@+id/lblDateTimeAddEdit"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="New EditText"
                    android:id="@+id/datetime" android:editable="false"
                    android:onClick="SetTime"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Volume"
                    android:id="@+id/lblVolumeAddEdit"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="New EditText"
                    android:id="@+id/editVolume" android:layout_gravity="center_horizontal|top"
                    android:inputType="numberDecimal"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AlcoholPercent"
                    android:id="@+id/lblAlcoPercent" android:layout_gravity="center_horizontal|top"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="New EditText"
                    android:id="@+id/editAlcoPercent" android:layout_gravity="center" android:inputType="number"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Image"
                    android:id="@+id/lblImageAddEdit"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewAddEdit" android:layout_gravity="center_horizontal|right|top"
                    android:layout_weight="1" android:layout_margin="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                  android:layout_height="wrap_content" android:layout_weight="1" android:background="#FF8D8D8D"
                  android:gravity="center_horizontal" android:id="@+id/linearLayout">
        <Button android:text="Save" android:id="@+id/ButtonSaveDrink" android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <Button android:text="Cancel" android:id="@+id/ButtonCancelSaveDrink" android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>